--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -17,3 +17,16 @@
 
   100%
     transform: translateY(0px)
+.titulo-senal
+  position: relative
+  background-color: $color-secundario
+
+  img
+    position: absolute 
+    top: 0 
+    left: 0
+    transform: translateX(-50%)
+  h5 
+    margin-left: 1.5rem
+    margin-right: 1.5rem
+  
