--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -41,4 +41,26 @@
     margin-right: 1.5rem
 .linea-tiempo-d__item--selected .linea-tiempo-d__item__content__title, .linea-tiempo-d__item__content__slot
   background-color: #fff5c5
-  
+.cajon-b.color-acento-contenido:before
+  background-color: #ffedc5
+  opacity: 1
+  height: 100%
+.cajon-b.color-primario:before
+  background-color: #ffedc5
+  opacity: 1
+  height: 100%
+.cajon-b.arriba-derecha:before 
+  height: 100%
+.pasos-a.color-acento-contenido .pasos-a__circle div
+  color: $color-sistema-texto
+.slyder-a__bullets__item--active
+  background-color: #000000 !important
+  border: 0
+.slyder-a__bullets__item
+  background-color: #a5927b
+  border: 0
+.text-system
+  h1,h2,h3,h4,h5,h6,p,b,span,a, em
+    color: $color-sistema-texto !important
+.box-s
+  box-shadow: 2px 1px 10px 1px #0000003b
